# uparking

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc.cjs  .python-version  README.md  build_files.sh  dev-compose.yml  docker-compose.yaml  dockerfile  example.env  package-lock.json  package.json  pnpm-lock.yaml  prod-compose.yml  pyproject.toml  requirements.txt  vercel.json
.ropeproject/: autoimport.db
backend/: .dockerignore  env.dockerfile  manage.py  ola  ola2  pyproject.toml  requirements.txt
backend/templates/account/email/: email_confirmation_message.html  email_confirmation_subject.txt
backend/uparking/: asgi.py  settings.py  urls.py
backend/uparking/administration/: apps.py  models.py  serializers.py  urls.py  views.py
backend/uparking/administration/migrations/: 0001_initial.py  0002_initial.py  0003_UPDATE_SITE_NAME.py
backend/uparking/authentication/: adapters.py  exceptions.py  models.py  serializers.py  urls.py  utils.py
backend/uparking/authentication/migrations/: 0001_initial.py  0002_alter_customuser_s_apellido_and_more.py  0003_customuser_telefono.py
backend/uparking/user/: apps.py  channel_senders.py  consumers.py  permissions.py  serializers.py  urls.py  views.py
backend/uparking/vigilante/: apps.py  permissions.py  serializers.py  urls.py  views.py
frontend/: .eslintrc.cjs  dev.dockerfile  env.dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  prod.dockerfile  vite.config.ts
frontend/src/: constants.tsx  main.tsx  routeTree.gen.ts
frontend/src/api/: auth.ts
frontend/src/components/: FullTextSearchBar.tsx
hooks/: generate-requirements.py
nginx/: nginx-setup.conf
src/: build_files.sh  constants.tsx  dev.dockerfile  dockerfile  env.dockerfile  main.tsx  manage.py  pyproject.toml  requirements.txt  routeTree.gen.ts  vercel.json
src/api/: auth.ts
src/assets/: logo.tsx
src/libs/: axiosAuthBearer.ts
src/routes/: __root.tsx  _admin.tsx  _auth.tsx  _home.tsx  index.tsx
src/stores/: auth.tsx
src/uparking/: asgi.py  settings.py  urls.py  wsgi.py
src/utils/: rut.ts
uparking/: settings.py  urls.py
uparking/administration/: models.py  serializers.py  urls.py  views.py
uparking/authentication/: apps.py  managers.py  models.py  serializers.py
uparking/user/: views.py
uparking/vigilante/: urls.py  views.py
(+105 files in other folders)
